tests/baselines/reference/multipleDefaultExports03.errors.txt
multipleDefaultExports03.ts(1,22): error TS2528: A module cannot have multiple default exports.
multipleDefaultExports03.ts(4,22): error TS2528: A module cannot have multiple default exports.


==== multipleDefaultExports03.ts (2 errors) ====
    export default class C {
                         ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 multipleDefaultExports03.ts:4:22: Another export default is here.
    }
    
    export default class C {
                         ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 multipleDefaultExports03.ts:1:22: The first export default is here.
    }